<resources>
    <string name="app_name">Podkis</string>
    <string name="podcast_thumbnail_content_description">Podcast thumbnail</string>
    <string name="podcast_detail_image_content_description">Podcast image</string>
    <string name="podcast_description_content_description">Podcast description</string>
    <string name="episode_description_content_description">Episode description</string>
    <string name="podcast_episode_player_content_description">Podcast audio player</string>
    <string name="season_number_content_description">Season number</string>
    <string name="episode_number_content_description">Episode number</string>
    <string name="episode_published_date_content_description">Date episode published</string>
    <string name="episode_title_content_description">Episode title</string>
    <string name="podcast_description_label">Description</string>
    <string name="podcast_episode_label">Episodes</string>
    <string name="action_refreshing">Refreshing podcasts…</string>
    <string name="podcast_checksum_prefs">podcast_checksum_prefs</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="restart">Restart</string>
    <string name="playback_channel_name">Playback</string>
    <string name="widget_default_title">Start listening…</string>
    <string name="ad_mob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_mob_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="podcast_list">
        <item>startalk-radio</item>
        <item>conan-obrien</item>
        <item>the-daily</item>
    </string-array>

    <!-- Test Strings for UI Design -->
    <string name="test_podcast_title">StarTalk Radio</string>
    <string name="test_podcast_description">Science, pop culture and comedy collide on StarTalk Radio! Astrophysicist and Hayden Planetarium director Neil deGrasse Tyson, his comic co-hosts, guest celebrities and scientists discuss astronomy, physics, and everything else about life in the universe. Keep Looking Up! New episodes premiere Friday nights at 7pm ET.</string>
    <string name="test_episode_title">The Future of Us, with Sir Martin Rees</string>
    <string name="test_episode_season_number">Season 9</string>
    <string name="test_episode_number">Episode 43</string>
    <string name="test_episode_published_date">Fri, 16 Nov 2018</string>
    <string name="test_episode_description">Technology, space travel, a changing climate – What does the future hold for us? Neil deGrasse Tyson ponders humanity’s future alongside comic co-host Maeve Higgins and astrophysicist, author, and Astronomer Royal Sir Martin Rees. Photo Credit: StarTalk Radio</string>

</resources>
